--- a/HealthCare/HealthCare.csproj
+++ b/HealthCare/HealthCare.csproj
@@ -271,7 +271,7 @@
   <ItemGroup>
     <Content Include="bin\Debug\HealthCare.exe" />
     <Content Include="bin\Debug\HealthCare.pdb" />
-    <Content Include="DB\cs6232_g2_finaliteration.sql" />
+    <Content Include="DB\cs6232_g2.sql" />
     <Content Include="DB\FINALERD.jpg" />
   </ItemGroup>
   <ItemGroup>
