--- a/HealthCare/HealthCare.csproj
+++ b/HealthCare/HealthCare.csproj
@@ -273,6 +273,7 @@
     <Content Include="bin\Debug\HealthCare.pdb" />
     <Content Include="DB\cs6232_g2.sql" />
     <Content Include="DB\FINALERD.jpg" />
+    <Content Include="DB\spMostPerformedTests.sql" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\Release\" />
